<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morningstar App</string>
    <string name="action_add_to_calendar">Add To Calendar</string>
    <string name="action_share">Share</string>
    <string name="action_directions">Directions</string>

    <string name="drawer_open">Navigation Drawer Open</string>
    <string name="drawer_close">Navigation Drawer Closed</string>

    <string name="default_content_description">Image</string>

    <string name="event_expand">Learn More</string>
    <string name="event_register">Register Now</string>

    <string name="play">Play</string>
    <string name="listen">Listen</string>

    <string name="share">Share</string>

    <string name="devotion_table">MCCDailyDevoRSS</string>
    <string name="title_activity_pdf">PdfActivity</string>
    <string name="action_settings">Settings</string>

    <string name="loading">Loading…</string>
    <string name="previous">previous</string>
    <string name="next">next</string>

    <string name="splash">Splash screen</string>
    <string name="series_image">Series cover image</string>
    <string name="event_image">Event image</string>
    <string name="title_activity_study">StudyActivity</string>

    <!-- transition item names -->
    <string name="transition_item">T_ITEM</string>
    <string name="title_activity_series_category">SeriesCategoryActivity</string>

    <plurals name="study_counter">
        <item quantity="one">%d study</item>
        <item quantity="other">%d studies</item>
    </plurals>

    <string name="empty_list">No items could be found</string>

    <string name="unknown_author">Unknown author</string>
    <string name="share_event_format">Join me on %1$s for %2$s. See more at %3$s</string>
    <string name="share_study_format">Morningstar\'s %1$s taught about %2$s from %3$s on %4$s. Check it out at: %5$s, or listen to it at %6$s.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home -->
    <string name="home_bulletin">Bulletin</string>
    <string name="home_events">Events</string>
    <string name="home_devotions">Devotions</string>
    <string name="home_studies">Studies</string>
    <string name="home_label">Current Study</string>

    <string name="bulletin_url">http://www.morningstarcc.org/uploads/BulletinMobile.pdf</string>
    <string name="bulletin_permission_request">Access to file storage is required to display the bulletin</string>
    <string name="bulletin_permission_denied">Cannot open bulletin without permissions</string>

    <string name="ok">ok</string>
    <string name="not_now">Not now</string>

</resources>
